crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-13.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <path d=\"M0 0L0 0c2.761 0 5 2.239 5 5\"/>\n    <path d=\"M0 0L0 0c2.761 0 5 2.239 5 5l5-5\"/>\n    <path d=\"M15 10c-2.761 0-5-2.239-5-5s2.239-5 5-5s5 2.239 5 5l-5 5\"/>\n    <path d=\"M41.008 0.102c1.891 0.387 3.393 1.841 3.849 3.705\"/>\n    <path d=\"M7.234 19.474C6.562 19.811 5.803 20 5 20c-2.761 0-5-2.239-5-5 0-1.767 0.917-3.32 2.301-4.209\"/>\n    <path d=\"M60 0c-2.761 0-5 2.239-5 5s2.239 5 5 5s5-2.239 5-5S62.761 0 60 0z\"/>\n    <path d=\"M15 23.54 c-2.017,0 -3.87,-.7 -5.33,-1.87 -.032,-.023 -.068,-.052 -.11,-.087 .042,.035 .078,.064 .11,.087 .048,.04 .08,.063 .08,.063 \"/>\n    <path d=\"M-9.5,82.311c-2.657,0-4.81-2.152-4.81-4.811c0-2.656,2.153-4.811,4.81-4.811S-4.69,74.844-4.69,77.5 C-4.69,80.158-6.843,82.311-9.5,82.311z\"/>\n    <path d=\"M1.5,13.4561 C1.5,15.3411 3.033,16.8751 4.918,16.8751 C6.478,16.8751 7.84,15.8201 8.229,14.3101 Z\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <path d="M0 0a5 5 0 0 1 5 5"/>
    <path d="M0 0a5 5 0 0 1 5 5l5-5"/>
    <path d="M15 10a5 5 0 1 1 5-5Z"/>
    <path d="M41.008.102a5.01 5.01 0 0 1 3.849 3.705"/>
    <path d="M7.234 19.474a5 5 0 0 1-4.933-8.683"/>
    <path d="M60 0a1 1 0 0 0 .001 9.999A1 1 0 0 0 60 0Z"/>
    <path d="M15 23.54a8.5 8.5 0 0 1-5.44-1.957 2 2 0 0 0 .19.15"/>
    <path d="M-9.5 82.311a1 1 0 0 1-.002-9.618 1 1 0 0 1 .002 9.618Z"/>
    <path d="M1.5 13.456a3.419 3.419 0 0 0 6.729.854Z"/>
</svg>
