crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-18.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg viewBox=\"0 0 1200 400\" xmlns=\"http://www.w3.org/2000/svg\">\n    <path d=\"M300 200 h-150 a150 150 0 1 0 150 -150 z\" fill=\"red\" stroke=\"blue\" stroke-width=\"5\" />\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 400">
    <path d="M300 200H150A150 150 0 1 0 300 50Z" fill="red" stroke="blue" stroke-width="5"/>
</svg>
