crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-2.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\n        Some(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <path d=\"M 10,50 L 20,30\"/>\n    <path d=\"M 10,50 C 20,30 40,50 60,70\"/>\n    <path d=\"M 10,50 C 20,30 40,50 60,70 S 20,30 30,60\"/>\n    <path d=\"M 10,50 Q 30,60 30,70\"/>\n    <path d=\"M 10,50 Q 30,60 30,70 T 40,70\"/>\n    <path d=\"M 10,50 A 20,60 45 0,1 40,70\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <path d="m10 50 10-20"></path>
    <path d="M10 50c10-20 30 0 50 20"></path>
    <path d="M10 50c10-20 30 0 50 20S20 30 30 60"></path>
    <path d="M10 50q20 10 20 20"></path>
    <path d="M10 50q20 10 20 20t10 0"></path>
    <path d="M10 50a20 60 45 0 1 30 20"></path>
</svg>
