crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_path_data__convert_path_data-21.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_path_data.rs
expression: "test_config(r#\"{ \"convertPathData\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\">\n  <path d=\"M1 1m1 1\"/>\n  <path fill=\"black\" d=\"M8.5 12Zm0 8q3.35 0 5.675-2.325\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
    <path d=""/>
    <path fill="#000" d="M8.5 20q3.35 0 5.675-2.325"/>
</svg>
